# opinionparacel

./: README.md  pyproject.toml  requirements.txt  setup.cfg
config/: config.yml
docs/: README.txt  index.html
scripts/: build_site.py  run_daily.py
src/paracel_monitor/: pipeline.py
